sumo/tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_empty_arrivalspeed/errors.duarouter
Error: Invalid arrivalspeed definition for vehicle '1'
Quitting (on error).
